--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="reset_test">重新测试</string>
     <string name="next">下一关</string>
     <string name="test_finsih">完成测试</string>
+    <string name="create_result">生成测试结果</string>
     <string name="score">分</string>
     <string name="high_pitch">高音测试</string>
     <string name="low_pitch">低音测试</string>
