--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,13 @@
     <string name="pickerview_hours">时</string>
     <string name="pickerview_minutes">分</string>
     <string name="pickerview_seconds">秒</string>
+
+    <string name="share_to">分享至站外</string>
+    <string name="wechat">微信</string>
+    <string name="weibo">微博</string>
+    <string name="link">链接</string>
+    <string name="wechat_circle">朋友圈</string>
+    <string name="qq">QQ</string>
+    <string name="qzone">QQ空间</string>
+    <string name="cancel">取消</string>
 </resources>
